--- a/devlingo/app/globals.css
+++ b/devlingo/app/globals.css
@@ -20,6 +20,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+box-shadow {
+  box-shadow: -13px 6px 43px 0px rgba(0,0,0,0.61);
+-webkit-box-shadow: -13px 6px 43px 0px rgba(0,0,0,0.61);
+-moz-box-shadow: -13px 6px 43px 0px rgba(0,0,0,0.61);
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
